커뮤니티 영역 JS 데이터 연동

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="shortcut icon" href="favicon.ico"/>
+  <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>거제청년센터</title>
@@ -354,23 +354,23 @@
             <a href="#" class="community-more">전체보기</a>
           </div>
           <div class="community-main">
-            <ul class="community-list">
+            <ul class="community-list data-info">
               <li>
-                <a href="#">6월 문화특강 [모스큐브&멘톨비누 만들기]</a>
+                <a href="#">7월 취창업 특강 지원자 모집 ♡</a>
                 <span>2022.06.17</span>
               </li>
               <li>
                 <a href="#">6월 문화특강 [모스큐브&멘톨비누 만들기]</a>
-                <span>2022.06.17</span>
+                <span>2022.06.13</span>
               </li>
               <li>
-                <a href="#">6월 문화특강 [모스큐브&멘톨비누 만들기]</a>
-                <span>2022.06.17</span>
+                <a href="#">6월 인문학특강 [4차 산업혁명과 청년]</a>
+                <span>2022.06.08</span>
               </li>
               <li>
-                <a href="#">6월 문화특강 [모스큐브&멘톨비누 만들기]</a>
-                <span>2022.06.17</span>
-              </li>
+                <a href="#">< 내꿈공간(내 일을 꿈꾸는 청년창업공간) 대관 안내 ></a>
+                <span>2022.06.02</span>
+              </li> -->
             </ul>
           </div>
         </div>
@@ -380,7 +380,7 @@
             <a href="#" class="community-more">전체보기</a>
           </div>
           <div class="community-main">
-            <ul class="community-list">
+            <ul class="community-list data-news">
               <li>
                 <a href="#">6월 문화특강 [모스큐브&멘톨비누 만들기]</a>
                 <span>2022.06.17</span>
