--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
   <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
     crossorigin="anonymous"></script>
 
+  <!-- jQuery UI -->
+  <link rel="stylesheet" href="//code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
+  <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
+
   <!-- Swiper -->
   <link rel="stylesheet" href="js/swiper/swiper.min.css">
   <script src="js/swiper/swiper.min.js"></script>
@@ -405,8 +409,8 @@
             <h3>센터일정</h3>
             <a href="#" class="community-more">전체보기</a>
           </div>
-          <div class="community-main">
-
+          <div class="community-main community-main-calendar">
+            <div id="datepicker"></div>
           </div>
         </div>
       </div>
@@ -463,8 +467,8 @@
           <h3>동영상 갤러리</h3>
           <a href="#" class="gallery-more">전체보기</a>
           <div class="gallery-video">
-            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/0-q1KafFCLU"
-              title="YouTube video player" frameborder="0"
+            <iframe width="100%" height="100%" src="https://geojeyouth.com/upload/bbs/vod/vdata_file_4.mp4"
+              title="YouTube video player" frameborder="0" mute="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
               allowfullscreen></iframe>
           </div>
