--- a/index.html
+++ b/index.html
@@ -27,13 +27,54 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.1/css/all.min.css"
     integrity="sha512-gMjQeDaELJ0ryCI+FtItusU9MkAifCZcGq789FrzkiM49D8lbDhoaUaIX4ASU187wofMNlgBJ4ckbrXM9sE6Pg=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-
+  <!-- 조건실행 -->
+  <!--[if lt IE 9]>
+    <script src="js/html5shiv.js"></script>
+  <![endif]-->
   <link rel="stylesheet" href="css/style.css">
   <script src="js/script.js"></script>
 
 </head>
 
 <body>
+      <!-- 안내창 -->
+    <div class="modal-wrap">
+      <div class="modal-main">
+        <div class="modal-icon">
+          <i class="fas fa-exclamation-triangle"></i>
+        </div>
+        <h1>거제청년센터 클론코딩</h1>
+        <p>
+          이 사이트는 <strong>스터디용으로 제작</strong>되었으며 <br />
+          <strong>모든 리소스의 저작권은 원저작자</strong>에게 있습니다. <br />
+        </p>
+
+        <div class="modal-bottom">
+          <span
+            >* 본 사이트는 <strong>Chrome</strong> 에 최적화되어 있습니다.</span
+          >
+          <span
+            >*해당 사이트 관련 문제사항이 있을시 연락해주시면
+            삭제하겠습니다.</span
+          >
+          <div class="modal-bottom-icon">
+            <a href="mailto:ehdusgml0903@naver.com" target="_blank"
+              ><i class="far fa-envelope"></i
+            ></a>
+            <a href="https://open.kakao.com/o/sXrenCHe" target="_blank"
+              ><i class="far fa-comments"></i
+            ></a>
+            <a href="https://github.com/yhist" target="_blank"
+              ><i class="fab fa-github"></i
+            ></a>
+          </div>
+        </div>
+
+        <button class="modal-close">
+          <i class="fas fa-times"></i>
+        </button>
+      </div>
+    </div>
   <!-- 더보기 메뉴 -->
   <div class="more-wrap">
     <div class="more-div">
